# diss_project

./: .gitignore  pyproject.toml  requirements.txt
analysis/: ob_sub_patterns.py
apps/: bert_analysis.py  construct_concepts_patterns.py  data_cleaner.py  data_visual_creation.py  models.py  ob_sub_patterns.py  reddit_cleaner.py  test.py  usenet_cleaner.py  visual_cc.py
dataset_cleaner/: data_cleaner.py  database.py  models.py  reddit_cleaner.py  usenet_cleaner.py  youtube_cleaner.py
dataset_extract/: dataset_extract.py  reddit_json.py
graphs/: aggregated_construct_patterns_by_year.csv  reddit_aggregated_patterns_by_year.csv  usenet_aggregated_construct_patterns_by_year.csv  usent_aggregated_patterns_by_year.csv
